WIP grid test with floats

--- a/Natours/grid-test.html
+++ b/Natours/grid-test.html
@@ -13,7 +13,7 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        <header class="header">
+        <!-- <header class="header">
             <div class="header__logo-box">
                 <img src="img/logo-white.png" alt="Logo" class="header__logo"/>
             </div>
@@ -26,7 +26,7 @@
                 <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
             
-        </header>
+        </header> -->
         <section class="grid-test">
             <div class="row">
                 <div class="col-1-of-2">
@@ -55,6 +55,43 @@
                     Col 2 of 3
                 </div>    
             </div>
+
+            <div class="row">
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+                <div class="col-2-of-4">
+                    Col 2 of 4
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+                <div class="col-3-of-4">
+                    Col 3 of 4
+                </div>
+            </div>
+
         </section>
         
     </body>
