--- a/Natours/index.html
+++ b/Natours/index.html
@@ -27,35 +27,23 @@
             </div>
             
         </header>
-        <section class="grid-test">
-            <div class="row">
-                <div class="col-1-of-2">
-                    Col 1 of 2
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-8">
+                    <h2 class="heading-secondary">
+                        Exiting tours for adventurous people
+                    </h2>
                 </div>
-                <div class="col-1-of-2">
-                    Col 1 of 2
+                <div class="row">
+                    <div class="col-1-of-2">
+                        Text-content
+                    </div>
+                    <div class="col-1-of-2">
+                        Image content
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-3">
-                    Col 1 of 3
-                </div>
-                <div class="col-1-of-3">
-                    Col 1 of 3
-                </div>
-                <div class="col-1-of-3">
-                    Col 1 of 3
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-3">
-                    Col 1 of 3
-                </div>
-                <div class="col-2-of-3">
-                    Col 2 of 3
-                </div>    
-            </div>
-        </section>
+            </section>
+        </main>
         
     </body>
 </html>
