--- a/Natours/index.html
+++ b/Natours/index.html
@@ -29,17 +29,29 @@
         </header>
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8">
+                <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Exiting tours for adventurous people
                     </h2>
                 </div>
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text-content
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus soluta esse hic maiores architecto iste beatae perspiciatis perferendis reprehenderit cupiditate voluptas reiciendis dicta vel omnis, dolore error saepe sit culpa?
+                        </p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, consequatur a. Ab, assumenda! Cumque aliquam iure, esse odio saepe magni enim, animi porro nesciunt repudiandae eum deserunt ipsum ab consequatur.
+                        </p>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
-                        Image content
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="" class="composition__photo composition__photo--p3">
+                        </div>
                     </div>
                 </div>
             </section>
