--- a/Natours/index.html
+++ b/Natours/index.html
@@ -56,7 +56,6 @@
                 </div>
             </section>
             <section class="section-features">
-                <i class="icon-basic-world"></i>
                 <div class="row">
                     <div class="col-1-of-4">
                         <div class="feature-box">
@@ -200,7 +199,28 @@
                 <div class="u-center-text">
                     <a href="#" class="btn btn--green btn--animated">Discover our tours</a>
                 </div>
+            </section>
 
+            <section class="section-stories">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">Best weeeeeek</h3>
+                            <p>
+                                Lorem ipsm dolor sit amet, consectetur adipiswwwwwwwwwwwww wwwww wdwda wd wdawddwd dqcbtbra  ac asa saadsicing elit. Ut doloribus earum quasi illo ratione inventore, aliquam ipsam
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
         
