--- a/Natours/index.html
+++ b/Natours/index.html
@@ -202,6 +202,12 @@
             </section>
 
             <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop> 
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                    </video>
+                </div>
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         We make people genuinely happy
@@ -212,14 +218,32 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Joanna adawda</figcaption>
                         </figure>
                         <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">Best weeeeeek</h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Best wddeeeeeek</h3>
                             <p>
                                 Lorem ipsm dolor sit amet, consectetur adipiswwwwwwwwwwwww wwwww wdwda wd wdawddwd dqcbtbra  ac asa saadsicing elit. Ut doloribus earum quasi illo ratione inventore, aliquam ipsam
                             </p>
                         </div>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Babu</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">Vencedor BBB</h3>
+                            <p>
+                                Lorem ipsm dolor sit amet, consectetur adipiswwwwwwwwwwwww wwwww wdwda wd wdawddwd dqcbtbra  ac asa saadsicing elit. Ut doloribus earum quasi illo ratione inventore, aliquam ipsam
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-center-text">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
         </main>
