--- a/Natours/index.html
+++ b/Natours/index.html
@@ -13,6 +13,21 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
+            <label for="nav-toggle" class="navigation__button"></label>
+            <div class="navigation__background">&nbsp;</div>
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="#" class="navigation__link">About</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">Your Benefits</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">Popular Tours</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">Book Now</a></li>
+
+                </ul>
+            </nav>
+        </div>
         <header class="header">
             <div class="header__logo-box">
                 <img src="img/logo-white.png" alt="Logo" class="header__logo"/>
@@ -42,7 +57,7 @@
                         </p>
                         <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
                         <p class="paragraph">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, consequatur a. Ab, assumenda! Cumque aliquam iure, esse odio saepe magni enim, animi porro nesciunt repudiandae eum deserunt ipsum ab consequatur.
+                            Lorem ipsum dolor sit met consectetur adipisicing elit. Odit, consequatur a. Ab, assumenda! Cumque aliquam iure, esse odio saepe magni enim, animi porro nesciunt repudiandae eum deserunt ipsum ab consequatur.
                         </p>
                         <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
